<resources>
    <string name="app_name">Keroservice</string>
    <string name="map_api_key">AIzaSyD6uoxSDBALO20knafSxgMERXspiuzRizc</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_enabled">false</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_join">Join Now</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation_drawer">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wizard_activty">Wizard Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="do_not_have_and_account_create_account">Não tenho uma conta? <b> Criar Conta </b></string>
    <string name="already_have_and_account_create_account">Já tem sua conta? <b> Entrar Agora </b></string>
    <string name="forgot_your_password">Esqueceu sua senha?</string>
    <string name="password_reset_link">Password reset link will be sent to your email after Clicking Recover</string>
    <string name="you_agree_to_comply_with_the_supplemental_terms_amp_conditions_set_forth_in_this_agreement"><![CDATA[You agree to comply with the supplemental Terms & Conditions set forth in this agreement]]></string>
    <string name="title_activity_advance_search">AdvanceSearch</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="advance_search">Advance Search</string>
    <string name="all_categories">All Categories</string>
    <string name="sign_in_now">Já sou cadastrado</string>
    <string name="logging_in">Logging in…</string>
    <string name="sign_up">Registering…</string>
    <string name="register_now">Register Now</string>
    <string name="required_field">This field is required!</string>
    <string name="featured_provider">Featured Providers</string>
    <string name="regular_single_user">Regular Single User</string>
    <string name="company_professional">Company/ Professional</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="tite_leave_review">Leave Your Review</string>
    <string name="wizard_skip">Pular</string>
    <string name="wizard_join">Junte-se</string>
    <string name="tab_services">Services</string>
    <string name="tab_business_hours">Business Hours</string>
    <string name="tab_experience">Experience</string>
    <string name="tab_qualification">Qualification</string>
    <string name="tab_certificates"><![CDATA[Certificates & Awards]]></string>
    <string name="tab_languages">Languages</string>
    <string name="tab_amenities"><![CDATA[Amenities & Features]]></string>
    <string name="err_login_first">Please login first to book an appointment.</string>
    <string name="err_login_to_review">Please login first to leave a review.</string>
    <string name="err_login_to_chat">Please login first to chat with provider.</string>
    <string name="err_session_expire_to_chat">Your session has been expired. Please login again.</string>
    <string name="err_login_to_fvrt">Please login to add user in favorite list.</string>
    <string name="tab_appointments">My Appointments</string>
    <string name="tab_contact_us">Contact Us</string>
    <string name="msg_logout">Are you sure you want to signout?</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_category">Category</string>
    <string name="title_country">Country</string>
    <string name="title_city">City</string>
    <string name="title_sub_category">Sub Category</string>
    <string name="msg_select_category">Please select any category first</string>
    <string name="msg_select_country">Please select any country first</string>
    <string name="err_something_wrong">Something went wrong. Please check your internet connection and try again later!</string>
    <string name="err_no_internet">No internet connection!</string>
    <string name="msg_finalizing_appointment">Finalizing Appointment…</string>
    <string name="msg_phone_verification">Verifying Phone Number…</string>
    <string name="code_not_valid">Entered code is not valid!</string>
    <string name="set_location">Set Location</string>
    <string name="welcome_amp_greetings"><![CDATA[Bem vindo Keroservice]]></string>
    <string name="an_ultimate_directory_for_service_providers">Um diretório definitivo para provedores de serviços</string>
    <string name="register_as">Register As:</string>
    <string name="your_name">Your Name</string>
    <string name="msg_business">Business</string>
    <string name="msg_professional">Professional</string>
    <string name="msg_company_title">Company Title</string>
    <string name="msg_phone">Phone</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="hint_enter_location">Enter A Location</string>
    <string name="hint_lattitude">Enter Latitude</string>
    <string name="hint_longitude">Enter Longitude</string>
    <string name="btn_register_now">Register Now</string>
    <string name="hint_category">Category:</string>
    <string name="start_your_search">Start your Search</string>
    <string name="hint_keyword">Keyword</string>
    <string name="title_view_all"><![CDATA[Ver todos]]></string>
    <string name="title_featured_listing">Featured Listing</string>
    <string name="title_top_categories">Categorias</string>
    <string name="title_advanced_search">Advanced Search</string>
    <string name="title_search_now">Search Now</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_my_appointments">My Appointments</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_about_us">About Us</string>
    <string name="title_terms_of_use">Terms Of Use</string>
    <string name="title_help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="title_contact_support">Contact Support</string>
    <string name="title_invite">Invite Friends</string>
    <string name="title_rate">Rate this App</string>
    <string name="title_logout">Logout</string>
    <string name="title_general">General</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_services">Services</string>
    <string name="title_appointment_type">Appointment Type</string>
    <string name="title_appointment_reason">Appointment Reason</string>
    <string name="title_add_photo">Add Photo</string>
    <string name="title_add_now">Add Now</string>
    <string name="title_upload_banner">Upload Banner Photo</string>
    <string name="title_select_categories">Select Categories</string>
    <string name="title_basic_information">Basic Information</string>
    <string name="title_tagline">Tag Line</string>
    <string name="title_zip">Zip/Postal Code</string>
    <string name="title_fax">Fax</string>
    <string name="title_url">URL</string>
    <string name="title_short_descrip">Short Description</string>
    <string name="title_location">Location</string>
    <string name="title_languages">Languages</string>
    <string name="title_update_now">Update Now</string>
    <string name="title_imp_instructions">Important Instructions:</string>
    <string name="location_note">Please note ! given below latitude and longitude is compulsory for search on map.</string>
    <string name="title_manage_services">Manage Services</string>
    <string name="title_manage_team">Manage Team</string>
    <string name="title_manage_jobs">Manage Jobs</string>
    <string name="title_manage_articles">Manage Articles</string>
    <string name="title_manage_appointments">Manage Appointments</string>
    <string name="title_favorite_listing">Favorite Listing</string>
    <string name="title_security_setting">Security Settings</string>
    <string name="title_privacy_setting">Privacy Settings</string>
    <string name="no_vote">(0 vote)</string>
    <string name="make_appointement">Make Appointement</string>
    <string name="txt_call">Call:&#160;</string>
    <string name="txt_search_by_keyword">Search By Keyword</string>
    <string name="title_website">Website</string>
    <string name="title_email">Email</string>
    <string name="select_time_slot">Please select any time slot!</string>
    <string name="msg_book_appointment">Booking appointment…</string>
    <string name="select_appointment_date">Select Appointment Date</string>
    <string name="select_appointment_time">Select Appointment Time</string>
    <string name="start_booking">Start Booking</string>
    <string name="txt_space_left">Spaces left:&#160;</string>
    <string name="waiting_for_automatically_detect_an_sms_sent_to">Waiting for automatically detect an SMS sent to</string>
    <string name="verify">Verify</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="title_resend">Resend</string>
    <string name="title_verify">Verify</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="search_by_category">Search By Category</string>
    <string name="category">Category:</string>
    <string name="sub_category">Sub Category:</string>
    <string name="search_by_location">Search By Location</string>
    <string name="city">City:</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="search">Search</string>
    <string name="distance_in_miles">Distance in ( Miles )&#160;</string>
    <string name="msg_exit">Are you sure you want to exit?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="version">Version &#160;</string>
    <string name="copyright_2017_the_listingo">Copyright @ 2020 Keroservice</string>
    <string name="title_introduction">Introduction</string>
    <string name="btn_direction">Direction</string>
    <string name="who_we_are_amp_what_we_do"><![CDATA[Who We Are & What We Do?]]></string>
    <string name="txt_services">Services</string>
    <string name="txt_business_hours">Business Hours</string>
    <string name="txt_experience">Experience</string>
    <string name="txt_qualification">Qualification</string>
    <string name="txt_certificates_amp_awards"><![CDATA[Certificates & Awards]]></string>
    <string name="txt_our_team">Our Team</string>
    <string name="txt_languages">Languages</string>
    <string name="txt_amenities_amp_features"><![CDATA[Amenities & Features]]></string>
    <string name="txt_media">Media</string>
    <string name="txt_downloads">Downloads</string>
    <string name="txt_contact_us">Contact Us</string>
    <string name="click_to_add_photo">Click to "Add Photo" Button to <br />Add  Profile Photo/Logo</string>
    <string name="click_to_add_banner">Click to "Add Photo" Button to <br />Add  Banner Photo</string>
    <string name="click_to_update_profile">Click to "Update Profile"</string>
    <string name="dlg_msg_submit_review">Submitting review…</string>
</resources>