<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/background"
            android:elevation="10dp"
            app:cardCornerRadius="7dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="536dp"
                android:background="@color/background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="117dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/logo_128"
                    android:scaleType="centerInside" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/login_backgroind"
                    android:orientation="vertical">


                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="top"
                        android:background="@android:color/transparent"
                        android:drawable="@drawable/ic_envelope"
                        android:drawableLeft="@drawable/ic_envelope"
                        android:fontFamily="@font/font_regular"
                        android:hint="@string/prompt_email"
                        android:imeActionId="@+id/password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textAlignment="viewStart"
                        android:textDirection="locale" />

                    <include layout="@layout/layout_single_line" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@android:color/transparent"
                        android:drawable="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:fontFamily="@font/font_regular"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textAlignment="viewStart"
                        android:textDirection="locale" />

                </LinearLayout>

                <TextView
                    android:id="@+id/view_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/font_medium"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/hint_color"

                    />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/detail_screen_text"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/view_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/font_medium"
                    android:text="@string/do_not_have_and_account_create_account"
                    android:textColor="@color/hint_color"
                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:fontFamily="@font/font_medium"
            android:text="@string/do_not_have_and_account_create_account"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>


</ScrollView>